--- a/.github/workflows/testing-push.yml
+++ b/.github/workflows/testing-push.yml
@@ -14,12 +14,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Testing
       working-directory: ./elena-frontend
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    # - run: npm ci
-    # - run: npm run build --if-present
-    - run: npm test
+      run: npm test
