--- a/.github/workflows/testing-push.yml
+++ b/.github/workflows/testing-push.yml
@@ -14,6 +14,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Testing
+
+    - name: install dependencies
+      working-directory: ./elena-frontend
+      run: npm install
+
+    - name: run tests
       working-directory: ./elena-frontend
       run: npm test
