--- a/elena-frontend/package.json
+++ b/elena-frontend/package.json
@@ -14,6 +14,7 @@
     "leaflet": "^1.7.1",
     "leaflet-control-geocoder": "^2.3.0",
     "leaflet-routing-machine": "^3.2.12",
+    "material-ui": "^0.20.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.2.0",
