--- a/.github/workflows/testing-push.yml
+++ b/.github/workflows/testing-push.yml
@@ -27,4 +27,4 @@ jobs:
   
     - name: run tests
       working-directory: ./elena-frontend
-      run: npm test
+      run: npm cache clean --force && npm test
