--- a/.github/workflows/testing-push.yml
+++ b/.github/workflows/testing-push.yml
@@ -6,6 +6,8 @@ name: React-testing
 on:
   push:
     branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
   build_testing:
@@ -19,6 +21,10 @@ jobs:
       working-directory: ./elena-frontend
       run: npm install
 
+    - name: install jest-dom
+      working-directory: ./elena-frontend
+      run: yarn add -D @testing-library/jest-dom
+  
     - name: run tests
       working-directory: ./elena-frontend
-      run: npm test
+      run: npm cache clean --force && npm test
