--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -11,6 +11,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Build
         working-directory: ./elena-frontend
+        - env:
+          API_KEY: ${{ secrets.AWS_KEY }} 
         run: npm ci && npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
