--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -11,6 +11,7 @@ jobs:
       - uses: actions/checkout@v2
       - env:
         API_KEY: ${{ secrets.AWS_KEY }}
+        run: export
       - name: Build
         working-directory: ./elena-frontend
         run: npm ci && npm run build
