--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - env:
-          API_KEY: ${{ secrets.AWS_KEY }}
+          REACT_APP_BACKEND: ${{ secrets.AWS_KEY }}
         run: export
       - name: Build
         working-directory: ./elena-frontend
