--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -10,10 +10,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Create ENV file
-        working-directory: ./elena-frontend
-        run: |
-          touch .env
-          echo REACT_APP_BACKEND = ${{ secrets.AWS_KEY }} >> .env
+          uses: SpicyPizza/create-envfile@v1
+          with:
+            envkey_REACT_APP_BACKEND: ${{ secrets.AWS_KEY }}
+            directory: ./elena-frontend
       - name: Build
         working-directory: ./elena-frontend
         run: npm ci && npm run build
